--- a/publication-conf_bib.html
+++ b/publication-conf_bib.html
@@ -7,7 +7,72 @@
 </head>
 
 <body>
-<h1>publication-conf.bib</h1><a name="wang2019two"></a><pre>
+<h1>publication-conf.bib</h1><a name="jia2020memetic"></a><pre>
+@inproceedings{<a href="publication-conf.html#jia2020memetic">jia2020memetic</a>,
+  title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
+  author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference},
+  pages = {1107--1115},
+  year = {2020},
+  month = {jul},
+  organization = {ACM},
+  doi = {10.1145/3377930.3389828}
+}
+</pre>
+
+<a name="zhang2020evolutionary"></a><pre>
+@inproceedings{<a href="publication-conf.html#zhang2020evolutionary">zhang2020evolutionary</a>,
+  title = {Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference Companion},
+  pages = {107--108},
+  year = {2020},
+  month = {jul},
+  organization = {ACM},
+  doi = {10.1145/3377929.3389934}
+}
+</pre>
+
+<a name="zhang2020guided"></a><pre>
+@inproceedings{<a href="publication-conf.html#zhang2020guided">zhang2020guided</a>,
+  title = {Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the European Conference on Genetic Programming},
+  pages = {262--278},
+  year = {2020},
+  month = {apr},
+  organization = {Springer},
+  doi = {10.1007/978-3-030-44094-7_17}
+}
+</pre>
+
+<a name="zhang2020genetic"></a><pre>
+@inproceedings{<a href="publication-conf.html#zhang2020genetic">zhang2020genetic</a>,
+  title = {Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling},
+  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
+  pages = {214--230},
+  year = {2020},
+  month = {apr},
+  organization = {Springer},
+  doi = {10.1007/978-3-030-43680-3_14}
+}
+</pre>
+
+<a name="tan2020group"></a><pre>
+@inproceedings{<a href="publication-conf.html#tan2020group">tan2020group</a>,
+  title = {A Group Genetic Algorithm for Resource Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
+  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
+  pages = {180--196},
+  year = {2020},
+  month = {apr},
+  organization = {Springer},
+  doi = {10.1007/978-3-030-43680-3_12}
+}
+</pre>
+
+<a name="wang2019two"></a><pre>
 @inproceedings{<a href="publication-conf.html#wang2019two">wang2019two</a>,
   title = {A Two-Stage Genetic Programming Hyper-Heuristic for Uncertain Capacitated Arc Routing Problem},
   author = {Wang, Shaolin and Mei, Yi and Park, John and Zhang, Mengjie},
