--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -34,41 +34,7 @@ Binzi Xu, Yi&nbsp;Mei, Yan Wang, Zhicheng Ji, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020memetic">2</a>]
-</td>
-<td class="bibtexitem">
-Ya-Hui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
- A memetic level-based learning swarm optimizer for large-scale water
-  distribution network optimization.
- In <em>Proceedings of the ACM Genetic and Evolutionary Computation
-  Conference</em>, pages 1107--1115. ACM, jul 2020.
-[&nbsp;<a href="publication-accepted_bib.html#jia2020memetic">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1145/3377930.3389828">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="zhang2020evolutionary">3</a>]
-</td>
-<td class="bibtexitem">
-Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
- Evolutionary multitasking for dynamic flexible job shop scheduling
-  via genetic programming hyper-heuristics.
- In <em>Proceedings of the ACM Genetic and Evolutionary Computation
-  Conference Companion</em>, pages 107--108. ACM, jul 2020.
-[&nbsp;<a href="publication-accepted_bib.html#zhang2020evolutionary">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1145/3377929.3389934">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="wang2020multi">4</a>]
+[<a name="wang2020multi">2</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -85,7 +51,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jackson2020genetic">5</a>]
+[<a name="jackson2020genetic">3</a>]
 </td>
 <td class="bibtexitem">
 Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -102,7 +68,7 @@ Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020cluster">6</a>]
+[<a name="costa2020cluster">4</a>]
 </td>
 <td class="bibtexitem">
 Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -119,7 +85,7 @@ Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020memetic">7</a>]
+[<a name="gao2020memetic">5</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
@@ -136,7 +102,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020genetic">8</a>]
+[<a name="ardeh2020genetic">6</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -153,7 +119,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2020fitness">9</a>]
+[<a name="masood2020fitness">7</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
@@ -170,7 +136,7 @@ Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="da2020survey">10</a>]
+[<a name="da2020survey">8</a>]
 </td>
 <td class="bibtexitem">
 Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -187,68 +153,17 @@ Alexandre&nbsp;Sawczuk da&nbsp;Silva, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020nsga">11</a>]
+[<a name="tan2020nsga">9</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
  An nsga-ii-based approach for multi-objective micro-service
   allocation in container-based clouds.
- In <em>Proceedings of the CCGrid</em>, pages 282--289. IEEE, jun 2020.
+ In <em>Proceedings of the IEEE/ACM International Symposium on
+  Cluster, Cloud and Internet Computing (CCGRID)</em>, pages 282--289. IEEE, jul
+  2020.
 [&nbsp;<a href="publication-accepted_bib.html#tan2020nsga">bib</a>&nbsp;| 
-<a href="https://doi.org/">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="zhang2020guided">12</a>]
-</td>
-<td class="bibtexitem">
-Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
- Guided subtree selection for genetic operators in genetic programming
-  for dynamic flexible job shop scheduling.
- In <em>Proceedings of the European Conference on Genetic
-  Programming</em>, pages 262--278. Springer, apr 2020.
-[&nbsp;<a href="publication-accepted_bib.html#zhang2020guided">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/978-3-030-44094-7_17">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="zhang2020genetic">13</a>]
-</td>
-<td class="bibtexitem">
-Fangfang Zhang, Yi&nbsp;Mei, and Mengjie Zhang.
- Genetic programming with adaptive search based on the frequency of
-  features for dynamic flexible job shop scheduling.
- In <em>Proceedings of the European Conference on Evolutionary
-  Computation in Combinatorial Optimisation</em>, pages 214--230. Springer, apr
-  2020.
-[&nbsp;<a href="publication-accepted_bib.html#zhang2020genetic">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/978-3-030-43680-3_14">DOI</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="tan2020group">14</a>]
-</td>
-<td class="bibtexitem">
-Boxiong Tan, Hui Ma, and Yi&nbsp;Mei.
- A group genetic algorithm for resource allocation in container-based
-  clouds.
- In <em>Proceedings of the European Conference on Evolutionary
-  Computation in Combinatorial Optimisation</em>, pages 180--196. Springer, apr
-  2020.
-[&nbsp;<a href="publication-accepted_bib.html#tan2020group">bib</a>&nbsp;| 
-<a href="https://doi.org/10.1007/978-3-030-43680-3_12">DOI</a>&nbsp;]
+<a href="https://doi.org/10.1109/CCGrid49817.2020.00-65">DOI</a>&nbsp;]
 
 </td>
 </tr>
