--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -19,32 +19,6 @@
 }
 </pre>
 
-<a name="jia2020memetic"></a><pre>
-@inproceedings{<a href="publication-accepted.html#jia2020memetic">jia2020memetic</a>,
-  title = {A Memetic Level-based Learning Swarm Optimizer for Large-scale Water Distribution Network Optimization},
-  author = {Jia, Ya-Hui and Mei, Yi and Zhang, Mengjie},
-  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference},
-  pages = {1107--1115},
-  year = {2020},
-  month = {jul},
-  organization = {ACM},
-  doi = {10.1145/3377930.3389828}
-}
-</pre>
-
-<a name="zhang2020evolutionary"></a><pre>
-@inproceedings{<a href="publication-accepted.html#zhang2020evolutionary">zhang2020evolutionary</a>,
-  title = {Evolutionary Multitasking for Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics},
-  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
-  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference Companion},
-  pages = {107--108},
-  year = {2020},
-  month = {jul},
-  organization = {ACM},
-  doi = {10.1145/3377929.3389934}
-}
-</pre>
-
 <a name="wang2020multi"></a><pre>
 @inproceedings{<a href="publication-accepted.html#wang2020multi">wang2020multi</a>,
   title = {A Multi-Objective Genetic Programming Hyper-Heuristic Approach to Uncertain Capacitated Arc Routing Problems},
@@ -142,51 +116,12 @@
 @inproceedings{<a href="publication-accepted.html#tan2020nsga">tan2020nsga</a>,
   title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
-  booktitle = {Proceedings of the CCGrid},
+  booktitle = {Proceedings of the IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID)},
   pages = {282--289},
   year = {2020},
-  month = {jun},
+  month = {jul},
   organization = {IEEE},
-  doi = {}
-}
-</pre>
-
-<a name="zhang2020guided"></a><pre>
-@inproceedings{<a href="publication-accepted.html#zhang2020guided">zhang2020guided</a>,
-  title = {Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling},
-  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
-  booktitle = {Proceedings of the European Conference on Genetic Programming},
-  pages = {262--278},
-  year = {2020},
-  month = {apr},
-  organization = {Springer},
-  doi = {10.1007/978-3-030-44094-7_17}
-}
-</pre>
-
-<a name="zhang2020genetic"></a><pre>
-@inproceedings{<a href="publication-accepted.html#zhang2020genetic">zhang2020genetic</a>,
-  title = {Genetic Programming with Adaptive Search Based on the Frequency of Features for Dynamic Flexible Job Shop Scheduling},
-  author = {Zhang, Fangfang and Mei, Yi and Zhang, Mengjie},
-  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
-  pages = {214--230},
-  year = {2020},
-  month = {apr},
-  organization = {Springer},
-  doi = {10.1007/978-3-030-43680-3_14}
-}
-</pre>
-
-<a name="tan2020group"></a><pre>
-@inproceedings{<a href="publication-accepted.html#tan2020group">tan2020group</a>,
-  title = {A Group Genetic Algorithm for Resource Allocation in Container-based Clouds},
-  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
-  booktitle = {Proceedings of the European Conference on Evolutionary Computation in Combinatorial Optimisation},
-  pages = {180--196},
-  year = {2020},
-  month = {apr},
-  organization = {Springer},
-  doi = {10.1007/978-3-030-43680-3_12}
+  doi = {10.1109/CCGrid49817.2020.00-65}
 }
 </pre>
 
