--- a/publication-conf_bib.html
+++ b/publication-conf_bib.html
@@ -33,6 +33,19 @@
 }
 </pre>
 
+<a name="tan2020nsga"></a><pre>
+@inproceedings{<a href="publication-conf.html#tan2020nsga">tan2020nsga</a>,
+  title = {An NSGA-II-based Approach for Multi-objective Micro-service  Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi},
+  booktitle = {Proceedings of the IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID)},
+  pages = {282--289},
+  year = {2020},
+  month = {jul},
+  organization = {IEEE},
+  doi = {10.1109/CCGrid49817.2020.00-65}
+}
+</pre>
+
 <a name="zhang2020guided"></a><pre>
 @inproceedings{<a href="publication-conf.html#zhang2020guided">zhang2020guided</a>,
   title = {Guided Subtree Selection for Genetic Operators in Genetic Programming for Dynamic Flexible Job Shop Scheduling},
