--- a/publication-journal_bib.html
+++ b/publication-journal_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-journal.bib</h1><a name="maclachlan2019genetic"></a><pre>
+<h1>publication-journal.bib</h1><a name="da2020survey"></a><pre>
+@article{<a href="publication-journal.html#da2020survey">da2020survey</a>,
+  title = {A Survey of Evolutionary Computation for Web Service Composition: A Technical Perspective},
+  author = {da Silva, Alexandre Sawczuk and Ma, Hui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Emerging Topics in Computational Intelligence},
+  month = {jul},
+  year = {2020},
+  vol = {4},
+  number = {4},
+  pages = {538--554},
+  publisher = {IEEE},
+  doi = {10.1109/TETCI.2020.2969213}
+}
+</pre>
+
+<a name="maclachlan2019genetic"></a><pre>
 @article{<a href="publication-journal.html#maclachlan2019genetic">maclachlan2019genetic</a>,
   title = {Genetic Programming Hyper-Heuristics with Vehicle Collaboration for Uncertain Capacitated Arc Routing Problems},
   author = {MacLachlan, Jordan and Mei, Yi and Branke, Juergen and Zhang, Mengjie},
