--- a/ecco/index.html
+++ b/ecco/index.html
@@ -529,6 +529,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 
 <ul>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></li>
+<li><a href="https://ecs.wgtn.ac.nz/Main/GradTaiwoAdeyemiAkindele">Taiwo Akindele</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJoaoCosta">Joao Costa</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/Kirita-RoseEscott">Kirita-Rose Escott</a></li>
@@ -541,7 +542,6 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradShaolinWang">Shaolin Wang</a></li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
@@ -549,6 +549,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <h4 id="alumni">Alumni</h4>
 
 <ul>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a> (Graduated in 2020)</li>
 <li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
