--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="xu2020genetic"></a><pre>
+<h1>publication-accepted.bib</h1><a name="tan2020survey"></a><pre>
+@article{<a href="publication-accepted.html#tan2020survey">tan2020survey</a>,
+  title = {A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds},
+  author = {Tan, Boxiong and Ma, Hui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cloud Computing},
+  month = {aug},
+  year = {2020},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="xu2020genetic"></a><pre>
 @article{<a href="publication-accepted.html#xu2020genetic">xu2020genetic</a>,
   title = {Genetic Programming with Delayed Routing for Multi-Objective Dynamic Flexible Job Shop Scheduling},
   author = {Xu, Binzi and Mei, Yi and Wang, Yan and Ji, Zhicheng and Zhang, Mengjie},
