--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,23 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="xu2020genetic">1</a>]
+[<a name="tan2020survey">1</a>]
+</td>
+<td class="bibtexitem">
+Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
+ A cooperative coevolution genetic programming hyper-heuristic
+  approach for on-line resource allocation in container-based clouds.
+ <em>IEEE Transactions on Cloud Computing</em>, aug 2020.
+[&nbsp;<a href="publication-accepted_bib.html#tan2020survey">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="xu2020genetic">2</a>]
 </td>
 <td class="bibtexitem">
 Binzi Xu, Yi&nbsp;Mei, Yan Wang, Zhicheng Ji, and Mengjie Zhang.
@@ -34,7 +50,7 @@ Binzi Xu, Yi&nbsp;Mei, Yan Wang, Zhicheng Ji, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020multi">2</a>]
+[<a name="wang2020multi">3</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -51,7 +67,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jackson2020genetic">3</a>]
+[<a name="jackson2020genetic">4</a>]
 </td>
 <td class="bibtexitem">
 Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -68,7 +84,7 @@ Jericho Jackson, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020cluster">4</a>]
+[<a name="costa2020cluster">5</a>]
 </td>
 <td class="bibtexitem">
 Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -85,7 +101,7 @@ Joao Guilherme&nbsp;Cavalcanti Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020memetic">5</a>]
+[<a name="gao2020memetic">6</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
@@ -102,7 +118,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Bin Xin, Ya-Hui Jia, and Will Browne.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020genetic">6</a>]
+[<a name="ardeh2020genetic">7</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -119,7 +135,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="masood2020fitness">7</a>]
+[<a name="masood2020fitness">8</a>]
 </td>
 <td class="bibtexitem">
 Atiya Masood, Gang Chen, Yi&nbsp;Mei, Harith Al-Sahaf, and Mengjie Zhang.
