--- a/index.html
+++ b/index.html
@@ -1993,7 +1993,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/tan-2020-survey/" itemprop="url">A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds</a>
+      <a href="/publication/tan-2020-cooperative/" itemprop="url">A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds</a>
     </h3>
 
     
@@ -2057,10 +2057,14 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/tan-2020-cooperative/tan-2020-cooperative.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/tan-2020-survey/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
+        data-filename="/publication/tan-2020-cooperative/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
   Cite
 </button>
 
@@ -2183,6 +2187,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
 
 
 
@@ -2311,6 +2321,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -2431,6 +2447,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -2550,6 +2572,18 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
