--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,14 +18,14 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020survey">1</a>]
+[<a name="tan2020cooperative">1</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
  A cooperative coevolution genetic programming hyper-heuristic
   approach for on-line resource allocation in container-based clouds.
  <em>IEEE Transactions on Cloud Computing</em>, aug 2020.
-[&nbsp;<a href="publication-accepted_bib.html#tan2020survey">bib</a>&nbsp;| 
+[&nbsp;<a href="publication-accepted_bib.html#tan2020cooperative">bib</a>&nbsp;| 
 <a href="https://doi.org/">DOI</a>&nbsp;]
 
 </td>
