--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="tan2020survey"></a><pre>
-@article{<a href="publication-accepted.html#tan2020survey">tan2020survey</a>,
+<h1>publication-accepted.bib</h1><a name="tan2020cooperative"></a><pre>
+@article{<a href="publication-accepted.html#tan2020cooperative">tan2020cooperative</a>,
   title = {A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds},
   author = {Tan, Boxiong and Ma, Hui and Mei, Yi and Zhang, Mengjie},
   journal = {IEEE Transactions on Cloud Computing},
