--- a/publication/tan-2020-cooperative/index.html
+++ b/publication/tan-2020-cooperative/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/publication/tan-2020-survey/">
+  <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/publication/tan-2020-cooperative/">
 
   
 
@@ -106,7 +106,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://meiyi1986.github.io/publication/tan-2020-survey/">
+  <link rel="canonical" href="https://meiyi1986.github.io/publication/tan-2020-cooperative/">
 
   
   
@@ -118,7 +118,7 @@
   <meta property="twitter:card" content="summary">
   
   <meta property="og:site_name" content="Yi Mei @ VUW">
-  <meta property="og:url" content="https://meiyi1986.github.io/publication/tan-2020-survey/">
+  <meta property="og:url" content="https://meiyi1986.github.io/publication/tan-2020-cooperative/">
   <meta property="og:title" content="A Cooperative Coevolution Genetic Programming Hyper-Heuristic Approach for On-line Resource Allocation in Container-based Clouds | Yi Mei @ VUW">
   <meta property="og:description" content=""><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
@@ -488,35 +488,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-survey%2f"
+         href="https://twitter.com/intent/tweet?text=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-cooperative%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-survey%2f"
+         href="https://www.facebook.com/sharer.php?u=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-cooperative%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-survey%2f&amp;title=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-cooperative%2f&amp;title=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-survey%2f&amp;title=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-cooperative%2f&amp;title=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-survey%2f">
+         href="mailto:?subject=A%20Cooperative%20Coevolution%20Genetic%20Programming%20Hyper-Heuristic%20Approach%20for%20On-line%20Resource%20Allocation%20in%20Container-based%20Clouds&amp;body=https%3a%2f%2fmeiyi1986.github.io%2fpublication%2ftan-2020-cooperative%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
@@ -540,6 +540,8 @@
 
 
 
+  
+
 
 
 
@@ -560,10 +562,14 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/tan-2020-cooperative/tan-2020-cooperative.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
-        data-filename="/publication/tan-2020-survey/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
+        data-filename="/publication/tan-2020-cooperative/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
   Cite
 </button>
 
