--- a/project/ahd/index.html
+++ b/project/ahd/index.html
@@ -530,6 +530,8 @@
   
   <a class="badge badge-light" href="/tags/evolutionary-learning/">evolutionary-learning</a>
   
+  <a class="badge badge-light" href="/tags/genetic-programming/">genetic-programming</a>
+  
 </div>
 
 
