--- a/project/esco/index.html
+++ b/project/esco/index.html
@@ -526,6 +526,18 @@
   
   <a class="badge badge-light" href="/tags/meta-heuristic/">meta-heuristic</a>
   
+  <a class="badge badge-light" href="/tags/hyper-heuristic/">hyper-heuristic</a>
+  
+  <a class="badge badge-light" href="/tags/genetic-programming/">genetic-programming</a>
+  
+  <a class="badge badge-light" href="/tags/memetic-algorithm/">memetic-algorithm</a>
+  
+  <a class="badge badge-light" href="/tags/multi-objective/">multi-objective</a>
+  
+  <a class="badge badge-light" href="/tags/transfer-optimisation/">transfer-optimisation</a>
+  
+  <a class="badge badge-light" href="/tags/multitask-optimisation/">multitask-optimisation</a>
+  
 </div>
 
 
