--- a/project/lsgo/index.html
+++ b/project/lsgo/index.html
@@ -528,7 +528,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/optimisation/">optimisation</a>
+  <a class="badge badge-light" href="/tags/divide-and-conquer/">divide-and-conquer</a>
   
   <a class="badge badge-light" href="/tags/cooperative-coevolution/">cooperative-coevolution</a>
   
