--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-hyper-heuristic js-id-evolutionary-learning" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-hyper-heuristic js-id-evolutionary-learning js-id-genetic-programming" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -689,7 +689,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-meta-heuristic" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-meta-heuristic js-id-hyper-heuristic js-id-genetic-programming js-id-memetic-algorithm js-id-multi-objective js-id-transfer-optimisation js-id-multitask-optimisation" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -711,7 +711,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-optimisation js-id-cooperative-coevolution" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-divide-and-conquer js-id-cooperative-coevolution" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
