--- a/supervision/index.html
+++ b/supervision/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="PhD  **Taiwo Akindele** (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;">
+  <meta name="description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/supervision/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/supervision/">
   <meta property="og:title" content="Supervision | Yi Mei @ VUW">
-  <meta property="og:description" content="PhD  **Taiwo Akindele** (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="PhD  Taiwo Akindele (Victoria University of Wellington, 2020): &#34;Resource Allocation problem in Cloud&#34; (with Dr Hui Ma) **Shaolin Wang** (Victoria University of Wellington, 2019): &#34;Genetic Programming for Uncertain Arc Routing Problem&#34; (with Prof Mengjie Zhang) **Joao Costa** (Victoria University of Wellington, 2019): &#34;Hyper-heuristic for Vehicle Routing&#34; (with Prof Mengjie Zhang) **Amirhossein Mostofi** (Victoria University of Wellington, 2019): &#34;Optimisation in Pharmecautical Supply Chain Management&#34; (with Dr Vipul Jain) **Shubhangi Patel** (Victoria University of Wellington, 2019): &#34;"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -507,7 +507,7 @@
 <h3 id="phd">PhD</h3>
 
 <ol>
-<li>**Taiwo Akindele** (Victoria University of Wellington, 2020): "Resource Allocation problem in Cloud" (with Dr Hui Ma)</li>
+<li><b>Taiwo Akindele</b> (Victoria University of Wellington, 2020): "Resource Allocation problem in Cloud" (with Dr Hui Ma)</li>
 <li>**Shaolin Wang** (Victoria University of Wellington, 2019): "Genetic Programming for Uncertain Arc Routing Problem" (with Prof Mengjie Zhang)</li>
 <li>**Joao Costa** (Victoria University of Wellington, 2019): "Hyper-heuristic for Vehicle Routing" (with Prof Mengjie Zhang)</li>
 <li>**Amirhossein Mostofi** (Victoria University of Wellington, 2019): "Optimisation in Pharmecautical Supply Chain Management" (with Dr Vipul Jain)</li>
